--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-pring.jpa.open-in-view=false
+spring.profiles.active=${APP_PROFILE:test}
 
-spring.profiles.active=test
+spring.jpa.open-in-view=false
